--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             bottom: 0;
             width: 100%;
         }
+        section{
+            margin-buttom: 5px;
+        }
     </style> 
 </head>
 <body>
