--- a/index.html
+++ b/index.html
@@ -57,14 +57,11 @@
         footer {
             background-color: #333;
             color: #fff;
-            
+            margin-top: 10px;
             text-align: center;
             position: fixed;
             bottom: 0;
             width: 100%;
-        }
-        section{
-            margin-buttom: 5px;
         }
     </style> 
 </head>
