--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         footer {
             background-color: #333;
             color: #fff;
-            margin-top: 10px;
             text-align: center;
             position: fixed;
             bottom: 0;
             width: 100%;
+            margin: auto;
         }
     </style> 
 </head>
