--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             color: #fff;
             text-align: center;
             position: fixed;
+            height: 10%;
             bottom: 0;
             width: 100%;
-            
         }
     </style> 
 </head>
