--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             background-color: #333;
             color: #fff;
             text-align: center;
-            position: fixed;
+            position: absolute;
             height: 10%;
             bottom: 0;
             width: 100%;
