--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             bottom: 0;
             width: 100%;
         }
+        p{
+            padding:0;
+        }
     </style> 
 </head>
 <body>
