--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
             width: 100%;
         }
         p{
-            padding:0;
+            margin: 0; 
+            padding: 0;
         }
     </style> 
 </head>
