--- a/login.html
+++ b/login.html
@@ -87,7 +87,7 @@
             color: #fff;
             
             text-align: center;
-            position: fixed;
+            position: relative;
             bottom: 0;
             width: 100%;
         }
