--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             color: #fff;
             text-align: center;
             width: 100%;
+            padding: 5px;
         }
         p{
             margin: 0; 
