--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             color: #fff;
             text-align: center;
             width: 100%;
-            padding: 5px;
+            padding-top: 5px;
+            padding-buttom: 5px;
         }
         p{
             margin: 0; 
